// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Toast Components > Should match the snapshot with default type 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-1mdt17p-MuiSnackbar-root"
        role="presentation"
      >
        <div
          class="MuiBox-root css-dkp0sd"
          direction="down"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiBox-root css-12qx4gb"
          />
          <div
            class="MuiBox-root css-z2rlj8"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-x2nl2j-MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M0 12C0 5.3726 5.3726 0 12 0C18.6274 0 24 5.3726 24 12C24 18.6274 18.6274 24 12 24C5.3726 24 0 18.6274 0 12ZM2 12C2 6.47717 6.47717 2 12 2C17.5228 2 22 6.47717 22 12C22 17.5228 17.5228 22 12 22C6.47717 22 2 17.5228 2 12ZM12.0281 7.49545C12.872 7.49545 13.5562 6.8113 13.5562 5.96736C13.5562 5.12342 12.872 4.43927 12.0281 4.43927C11.1841 4.43927 10.5 5.12342 10.5 5.96736C10.5 6.8113 11.1841 7.49545 12.0281 7.49545ZM12.0281 9.43927H12.0286C12.5964 9.43927 13.0567 9.89956 13.0567 10.4674V18.4719C13.0567 19.0397 12.5964 19.5 12.0286 19.5H12.0281C11.4603 19.5 11 19.0397 11 18.4719V10.4674C11 9.89956 11.4603 9.43927 12.0281 9.43927Z"
                fill-rule="evenodd"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Default
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-1mdt17p-MuiSnackbar-root"
      role="presentation"
    >
      <div
        class="MuiBox-root css-dkp0sd"
        direction="down"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiBox-root css-12qx4gb"
        />
        <div
          class="MuiBox-root css-z2rlj8"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-x2nl2j-MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M0 12C0 5.3726 5.3726 0 12 0C18.6274 0 24 5.3726 24 12C24 18.6274 18.6274 24 12 24C5.3726 24 0 18.6274 0 12ZM2 12C2 6.47717 6.47717 2 12 2C17.5228 2 22 6.47717 22 12C22 17.5228 17.5228 22 12 22C6.47717 22 2 17.5228 2 12ZM12.0281 7.49545C12.872 7.49545 13.5562 6.8113 13.5562 5.96736C13.5562 5.12342 12.872 4.43927 12.0281 4.43927C11.1841 4.43927 10.5 5.12342 10.5 5.96736C10.5 6.8113 11.1841 7.49545 12.0281 7.49545ZM12.0281 9.43927H12.0286C12.5964 9.43927 13.0567 9.89956 13.0567 10.4674V18.4719C13.0567 19.0397 12.5964 19.5 12.0286 19.5H12.0281C11.4603 19.5 11 19.0397 11 18.4719V10.4674C11 9.89956 11.4603 9.43927 12.0281 9.43927Z"
              fill-rule="evenodd"
            />
          </svg>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Default
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Toast Components > Should match the snapshot with error type 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-1mdt17p-MuiSnackbar-root"
        role="presentation"
      >
        <div
          class="MuiBox-root css-dkp0sd"
          direction="down"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiBox-root css-1h5nxay"
          />
          <div
            class="MuiBox-root css-z2rlj8"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-idf20d-MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M0 12C0 5.3726 5.3726 0 12 0C18.6274 0 24 5.3726 24 12C24 18.6274 18.6274 24 12 24C5.3726 24 0 18.6274 0 12ZM2 12C2 6.47717 6.47717 2 12 2C17.5228 2 22 6.47717 22 12C22 17.5228 17.5228 22 12 22C6.47717 22 2 17.5228 2 12ZM12.0281 7.49545C12.872 7.49545 13.5562 6.8113 13.5562 5.96736C13.5562 5.12342 12.872 4.43927 12.0281 4.43927C11.1841 4.43927 10.5 5.12342 10.5 5.96736C10.5 6.8113 11.1841 7.49545 12.0281 7.49545ZM12.0281 9.43927H12.0286C12.5964 9.43927 13.0567 9.89956 13.0567 10.4674V18.4719C13.0567 19.0397 12.5964 19.5 12.0286 19.5H12.0281C11.4603 19.5 11 19.0397 11 18.4719V10.4674C11 9.89956 11.4603 9.43927 12.0281 9.43927Z"
                fill-rule="evenodd"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Error
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-1mdt17p-MuiSnackbar-root"
      role="presentation"
    >
      <div
        class="MuiBox-root css-dkp0sd"
        direction="down"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiBox-root css-1h5nxay"
        />
        <div
          class="MuiBox-root css-z2rlj8"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-idf20d-MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M0 12C0 5.3726 5.3726 0 12 0C18.6274 0 24 5.3726 24 12C24 18.6274 18.6274 24 12 24C5.3726 24 0 18.6274 0 12ZM2 12C2 6.47717 6.47717 2 12 2C17.5228 2 22 6.47717 22 12C22 17.5228 17.5228 22 12 22C6.47717 22 2 17.5228 2 12ZM12.0281 7.49545C12.872 7.49545 13.5562 6.8113 13.5562 5.96736C13.5562 5.12342 12.872 4.43927 12.0281 4.43927C11.1841 4.43927 10.5 5.12342 10.5 5.96736C10.5 6.8113 11.1841 7.49545 12.0281 7.49545ZM12.0281 9.43927H12.0286C12.5964 9.43927 13.0567 9.89956 13.0567 10.4674V18.4719C13.0567 19.0397 12.5964 19.5 12.0286 19.5H12.0281C11.4603 19.5 11 19.0397 11 18.4719V10.4674C11 9.89956 11.4603 9.43927 12.0281 9.43927Z"
              fill-rule="evenodd"
            />
          </svg>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Error
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Toast Components > Should match the snapshot with success type 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-1mdt17p-MuiSnackbar-root"
        role="presentation"
      >
        <div
          class="MuiBox-root css-dkp0sd"
          direction="down"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiBox-root css-j3wg13"
          />
          <div
            class="MuiBox-root css-z2rlj8"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tg3nid-MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.7082 7.44825L9.66732 13.4891L6.37648 10.2074L5.08398 11.4999L9.66732 16.0833L17.0007 8.74992L15.7082 7.44825ZM11.5007 2.33325C6.44065 2.33325 2.33398 6.43992 2.33398 11.4999C2.33398 16.5599 6.44065 20.6666 11.5007 20.6666C16.5607 20.6666 20.6673 16.5599 20.6673 11.4999C20.6673 6.43992 16.5607 2.33325 11.5007 2.33325ZM11.5007 18.8333C7.44898 18.8333 4.16732 15.5516 4.16732 11.4999C4.16732 7.44825 7.44898 4.16659 11.5007 4.16659C15.5523 4.16659 18.834 7.44825 18.834 11.4999C18.834 15.5516 15.5523 18.8333 11.5007 18.8333Z"
                fill="#6CC66A"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Success
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-1mdt17p-MuiSnackbar-root"
      role="presentation"
    >
      <div
        class="MuiBox-root css-dkp0sd"
        direction="down"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiBox-root css-j3wg13"
        />
        <div
          class="MuiBox-root css-z2rlj8"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tg3nid-MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.7082 7.44825L9.66732 13.4891L6.37648 10.2074L5.08398 11.4999L9.66732 16.0833L17.0007 8.74992L15.7082 7.44825ZM11.5007 2.33325C6.44065 2.33325 2.33398 6.43992 2.33398 11.4999C2.33398 16.5599 6.44065 20.6666 11.5007 20.6666C16.5607 20.6666 20.6673 16.5599 20.6673 11.4999C20.6673 6.43992 16.5607 2.33325 11.5007 2.33325ZM11.5007 18.8333C7.44898 18.8333 4.16732 15.5516 4.16732 11.4999C4.16732 7.44825 7.44898 4.16659 11.5007 4.16659C15.5523 4.16659 18.834 7.44825 18.834 11.4999C18.834 15.5516 15.5523 18.8333 11.5007 18.8333Z"
              fill="#6CC66A"
            />
          </svg>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Success
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
